# r2sync

./: .gitignore  .tagpr  CHANGELOG.md  Cargo.toml  Makefile  README.md  about.toml  action.yml  credits.html  install.sh
.github/actions/release/: action.yml
.github/workflows/: release.yaml  rust.yml  tagpr.yaml
author/: dist.sh
src/: cli.rs  main.rs
src/cli/: r2_client.rs  sync.rs  utils.rs
