[package]
name = "r2sync"
version = "0.0.5"
description = "cli for synchronizing files between a local directory and Cloudflare R2"
authors = ["Masayuki Matsuki <y.songmu@gmail.com>"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"
exclude = ["Makefile", "author/*"]
repository = "https://github.com/Songmu/r2sync"

[[bin]]
name = "r2sync"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.83"
aws-sdk-s3 = { version = "1.57.0", features = ["behavior-version-latest"] }
aws-smithy-async = "1.2.1"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
md5 = "0.7.0"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
tempfile = "3.13.0"
mockall = "0.13.0"
